fix(wizard): Align badge right edge with logo right edge

--- a/stylus/components/wizard.styl
+++ b/stylus/components/wizard.styl
@@ -176,7 +176,7 @@ $wizard-logo-badge
     justify-content center
     position absolute
     bottom rem(6)
-    right rem(16)
+    right rem(-6)
     width rem(32)
     height rem(32)
     border .125rem solid white
